@@ -4,6 +4,8 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.peertopeer.enums.MessageStatus;
 import com.peertopeer.service.ChatService;
 import com.peertopeer.service.PresenceService;
+import com.peertopeer.service.PrivateChat;
+import com.peertopeer.service.StatusService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
@@ -13,6 +15,7 @@ import org.springframework.web.socket.WebSocketSession;
 import org.springframework.web.socket.handler.TextWebSocketHandler;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -26,11 +29,11 @@ public class ChatWebSocketHandler extends TextWebSocketHandler {
 
     private final Map<String, Set<WebSocketSession>> roomSessions = new ConcurrentHashMap<>();
 
-    private final Map<String, WebSocketSession> userSessions = new ConcurrentHashMap<>();
+    public static final Map<String, WebSocketSession> userSessions = new ConcurrentHashMap<>();
 
     private final PresenceService presenceService;
-
-    private final ChatService chatService;
+    private final StatusService statusService;
+    private final PrivateChat privateChat;
 
 
     @Override
@@ -41,20 +44,20 @@ public class ChatWebSocketHandler extends TextWebSocketHandler {
             return;
         }
         userSessions.put(user, session);
+        session.getAttributes().put("user", user);
 
         String type = getParam(session, "type");
         String conversationId;
 
         if ("group".equalsIgnoreCase(type)) {
-            conversationId = null;
-            String room = getParam(session, "target");
-            if (!isEmpty(room)) {
-                roomSessions.computeIfAbsent(room,
+            conversationId = getParam(session, "conversationId");
+            if (!isEmpty(conversationId)) {
+                roomSessions.computeIfAbsent(conversationId,
                         r -> ConcurrentHashMap.newKeySet()).add(session);
-                session.getAttributes().put("room", room);
+                session.getAttributes().put("room", conversationId);
             }
         } else if ("private".equalsIgnoreCase(type)) {
-            conversationId = privateConnect(session, user);
+            conversationId = privateChat.privateConnect(session, user);
         } else {
             conversationId = null;
         }
@@ -72,24 +75,23 @@ public class ChatWebSocketHandler extends TextWebSocketHandler {
                         }
                     });
         }
-        session.getAttributes().put("user", user);
     }
 
     @Override
     protected void handleTextMessage(WebSocketSession session, TextMessage message) throws Exception {
         Map<String, String> payload = new ObjectMapper().readValue(message.getPayload(), Map.class);
-        String type = (String) session.getAttributes().get("type");
+        String type = getParam(session, "type");
 
 
         if ("typing".equals(payload.get("type"))) {
-            handleTypingStatus(session, payload);
+            statusService.handleTypingStatus(session, payload);
             return;
         }
 
         if ("group".equals(type)) {
             groupMsg(session, payload);
         } else if ("private".equals(type)) {
-            privateMsg(session, payload);
+            privateChat.privateMsg(session, payload);
         }
     }
 
@@ -97,8 +99,8 @@ public class ChatWebSocketHandler extends TextWebSocketHandler {
     @Override
     public void afterConnectionClosed(WebSocketSession session, CloseStatus status) {
         String user = (String) session.getAttributes().get("user");
-        Long conversationId = (Long) session.getAttributes().get("conversationId");
-        presenceService.offScreen(user, String.valueOf(conversationId));
+        String conversationId = session.getAttributes().get("conversationId").toString();
+        presenceService.offScreen(user, conversationId);
         userSessions.remove(user);
 
         String room = (String) session.getAttributes().get("room");
@@ -111,27 +113,6 @@ public class ChatWebSocketHandler extends TextWebSocketHandler {
         }
     }
 
-    private String privateConnect(WebSocketSession session, String user) throws IOException {
-        String conversationId;
-        String receiver = getParam(session, "receiver");
-        if (!isEmpty(receiver)) {
-            conversationId = String.valueOf(chatService.create(user, receiver));
-            chatService.updateMessageChatStatus(Long.parseLong(conversationId), user);
-            session.getAttributes().put("conversationId", conversationId);
-            session.sendMessage(new TextMessage("conversationId:" + conversationId));
-        } else {
-            String cid = getParam(session, "conversationId");
-            if (!isEmpty(cid)) {
-                conversationId = cid;
-                long value = Long.parseLong(cid);
-                chatService.updateMessageChatStatus(value, user);
-                session.getAttributes().put("conversationId", value);
-            } else {
-                conversationId = null;
-            }
-        }
-        return conversationId;
-    }
 
     private void reloadMessages(String conversationId, String receiver) throws IOException {
 
@@ -146,100 +127,25 @@ public class ChatWebSocketHandler extends TextWebSocketHandler {
         }
     }
 
-    private void handleTypingStatus(WebSocketSession session,
-                                    Map<String, String> payload) throws IOException {
-        String fromUser = getParam(session, "sender");
-        String toUser = payload.get("to");
 
-
-        String chatId = getPrivateChatId(fromUser, toUser);
-
-        if (Objects.equals(payload.get("isTyping"), "true")) {
-            presenceService.setTyping(chatId, fromUser);
-        } else {
-            presenceService.clearTyping(chatId, fromUser);
-        }
-
-
-        WebSocketSession peerSession = userSessions.get(toUser);
-        if (peerSession != null && peerSession.isOpen()) {
-            Map<String, Object> typingMessage = Map.of(
-                    "type", "typing",
-                    "from", fromUser,
-                    "isTyping", payload.get("isTyping")
-            );
-            String json = new ObjectMapper().writeValueAsString(typingMessage);
-            peerSession.sendMessage(new TextMessage(json));
-        }
-    }
-
-    private String getPrivateChatId(String user1, String user2) {
-        return user1.compareTo(user2) < 0
-                ? user1 + "_" + user2
-                : user2 + "_" + user1;
-    }
-
-
-    private void groupMsg(WebSocketSession session, Map<String, String> payload) throws IOException {
-        String room = (String) session.getAttributes().get("room");
-        String user = getParam(session, "user");
+    private void groupMsg(WebSocketSession session, Map<String, String> payload) {
+        String room = getParam(session, "conversationId");
+        String user = getParam(session, "sender");
         String msg = payload.get("msg");
-        for (WebSocketSession s : roomSessions.getOrDefault(room, Set.of())) {
-            if (s.isOpen()) {
-                s.sendMessage(new TextMessage(String.format("{\"from\":\"%s\", \"msg\":%s}",
-                        user, msg)));
-            }
-        }
+        roomSessions.getOrDefault(room, Collections.emptySet()).stream()
+                .filter(peerSession -> peerSession.isOpen() && !peerSession.getAttributes().get("user").equals(user))
+                .forEach(peerSession -> {
+                    try {
+                        String message = String.format("{\"from\":\"%s\", \"msg\":\"%s\"}", user, msg);
+                        peerSession.sendMessage(new TextMessage(message));
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
+                });
     }
 
 
-    private void privateMsg(WebSocketSession session, Map<String, String> payload) throws IOException {
-
-        String receiver = payload.get("receiver");
-        String sender = getParam(session, "sender");
-        String conversationId = getParam(session, "conversationId");
-
-        WebSocketSession peerSession = getUserSession(receiver);
-
-        boolean isOnScreen = presenceService.isOnScreen(receiver, conversationId);
-        boolean online = presenceService.isOnline(receiver);
-
-        MessageStatus status = getMessageStatus(online, isOnScreen);
-
-        String msg = payload.get("msg");
-        String messageId = String.valueOf(chatService.saveMessage(conversationId, sender, msg, status));
-
-        if (online && isOnScreen) {
-            Map<String, String> response = Map.of(
-                    "conversationId", conversationId,
-                    "sender", sender,
-                    "receiver", receiver,
-                    "msg", msg,
-                    "msgId", messageId
-            );
-            peerSession.sendMessage(new TextMessage(new ObjectMapper().writeValueAsString(response)));
-        }
-        // ✅ Send delivered status to sender
-        sendStatus(status, sender, messageId, conversationId);
-    }
-
-    private void sendStatus(MessageStatus status, String fromUser, String msgId,
-                            String conversationId) throws IOException {
-        Map<String, Object> deliveredStatus = Map.of(
-                "conversationId", conversationId,
-                "statusReceiver", fromUser,
-                "msgId", msgId,
-                "type", "status",
-                "status", status
-        );
-        WebSocketSession senderSession = getUserSession(fromUser);
-        if (senderSession != null && senderSession.isOpen()) {
-            senderSession.sendMessage(new TextMessage(new ObjectMapper().writeValueAsString(deliveredStatus)));
-        }
-    }
-
-
-    public WebSocketSession getUserSession(String user) {
+    public static WebSocketSession getUserSession(String user) {
         return userSessions.get(user);
     }
 }
